--- a/package.json
+++ b/package.json
@@ -24,10 +24,23 @@
   "homepage": "https://github.com/kelseythejackson/gulp-project-starter#readme",
   "devDependencies": {
     "autoprefixer": "^7.2.4",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.23.3",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.3"
+    "gulp-sourcemaps": "^2.6.3",
+    "gulp-useref": "^3.1.4",
+    "postcss-pxtorem": "^4.0.1",
+    "run-sequence": "^2.2.1",
+    "gulp-pug": "^3.3.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
